A batch of cumulative changes.